--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,12 +27,19 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+    role_hierarchy:
+        ROLE_ADMIN: [ 'ROLE_GROUP_ADMIN' ]
+        ROLE_GROUP_ADMIN: [ 'ROLE_DRIVER' ]
+        ROLE_DRIVER: ['ROLE_USER']
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/conductores, roles: ROLE_DRIVER }
+         - { path: ^/grupos, roles: ROLE_DRIVER }
+         - { path: ^/notificar, roles: ROLE_DRIVER }
 
 when@test:
     security:
