--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.18",
         "@mui/material": "^5.15.18",
+        "prop-types": "^15.8.1",
+        "react-icons": "^5.2.1",
         "react-router-dom": "^6.23.1"
     }
 }
