--- a/.env
+++ b/.env
@@ -29,9 +29,14 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=gmail+smtp://commun.wheels@gmail.com:pfyr%20oppg%20khyt%20tiho@default
 ###< symfony/mailer ###
 
 ###> symfony/sendgrid-mailer ###
 # MAILER_DSN=sendgrid://KEY@default
 ###< symfony/sendgrid-mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
