--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -2,7 +2,7 @@ framework:
     mailer:
         dsn: '%env(MAILER_DSN)%'
 
-when@dev:
-    framework:
-        mailer:
-            dsn: 'null://null'
+#when@dev:
+#    framework:
+#        mailer:
+#            dsn: 'null://null'
